Fix menu overflow

--- a/frontend/global/global.css
+++ b/frontend/global/global.css
@@ -6,7 +6,7 @@ nav {
 	padding: 20px 20px;
 }
 
-nav>div {
+nav > div {
 	margin: auto;
 	padding: 0px;
 }
@@ -27,10 +27,6 @@ nav #nav-links {
 	max-height: 0px;
 	transition: max-height 0.25s ease-in-out;
 	overflow: hidden;
-}
-
-nav #nav-links.show {
-	max-height: 150px;
 }
 
 nav #nav-links ul {
@@ -121,7 +117,8 @@ nav a:hover {
 	color: var(--foreground_text_color);
 }
 
-html, body {
+html,
+body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
